Responsive design para Tablet Hecho

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
             <button class="quieroinscribirme">Quiero Inscribirme</button>
         </section>
         <section class="video">
-            <div class="main__video">
-                <iframe width="800" height="450" src="https://www.youtube.com/embed/OfGgVepGyC4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="main_video--contenedor">
+                <iframe class="main__video" src="https://www.youtube.com/embed/OfGgVepGyC4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="main__videodescription">
-                <h4>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus cum, velit aperiam culpa, labore recusandae maxime alias tenetur, deleniti eaque ratione. Nesciunt error mollitia necessitatibus maxime voluptatum explicabo similique. Id.</h4>
+                <h4>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus cum, velit aperiam culpa, labore recusandae maxime alias tenetur, deleniti eaque ratione. Nesciunt error mollitia necessitatibus maxime voluptatum explicabo similique. Id. .. ... </h4>
             </div>
         </section>
     </main>
