--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-widsth, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/8c75121902.js" crossorigin="anonymous"></script>
+    <script defer src="index.js"></script>
     <title>FotoProWeb</title>  
 </head>
 
@@ -24,6 +26,7 @@
                 <div class="header__buscador">
                     <input type="text">Buscar
                 </div>
+                <button class="header__boton_desplegable"><i class="fa-solid fa-bars"></i></i></button>
                 <ul class="header__navegador">
                     <li class="botonesheader"><a href="paginas/eventos.html">Eventos</a></li>
                     <li class="botonesheader"><a href="paginas/capacitacion.html">Capacitacion</a></li>
