agrego responsive para celular

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <header>
         <section class="header__index">
             <div class="header__logo">
-                <img src="recursos/logo.jpg" alt="logo" height="100px">
+                <img src="recursos/logo.jpg" alt="logo" height="100px" class="header__logo--celu">
             </div>
             <nav class="header__nav">
                 <div class="header__loginbtn--padre">
                     <a href="paginas/login.html" target="_blank"><button class="header__loginbtn">Login</button></a>
                 </div>
                 <div class="header__buscador">
-                    <input type="text">Buscar
+                    <input type="text" class="header__buscador--input">Buscar
                 </div>
                 <button class="header__boton_desplegable"><i class="fa-solid fa-bars"></i></i></button>
                 <ul class="header__navegador">
