--- a/paginas/login.html
+++ b/paginas/login.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-widsth, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <script src="https://kit.fontawesome.com/8c75121902.js" crossorigin="anonymous"></script>
     <script defer src="index.js"></script>
@@ -36,12 +37,26 @@
         </section>
     </header>
 
-    <main class="main__login">
-        <section>
+    <main>
+        <section class="container-fluid">
+            <div class="form-floating mb-3">
+                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                <label for="floatingInput">Email</label>
+            </div>
+            <div class="form-floating">
+                <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                <label for="floatingPassword">Contraseña</label>
+            </div>
+            <div class="form-floating">
+                <input class="input__btn" type="submit" value="iniciar sesion">
+            </div>
+
+        </section>
+<!--         <section class="main__page">
             <input type="text" class="main_input">usuario
             <input type="text" class="main_input">contraseña
             <input type="submit" value="iniciar sesion">
-        </section>
+        </section> -->
     </main>
 
     <footer>
@@ -58,6 +73,6 @@
         </section>
     </footer>
 
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html> 
