--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <input type="text" class="header__buscador--input">Buscar
                 </div>
                 <button class="header__boton_desplegable"><i class="fa-solid fa-bars"></i></i></button>
-                <ul class="header__navegador">
+                <ul class="header__navegador header__navegador--visible">
                     <li class="botonesheader"><a href="paginas/eventos.html">Eventos</a></li>
                     <li class="botonesheader"><a href="paginas/capacitacion.html">Capacitacion</a></li>
                     <li class="botonesheader"><a href="paginas/contactanos.html">Contactanos</a></li>
