arreglo y termino pag login con bootstrap

--- a/paginas/login.html
+++ b/paginas/login.html
@@ -41,11 +41,11 @@
         <section class="container-fluid">
             <div class="form-floating mb-3">
                 <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                <label for="floatingInput">Email</label>
+                <label for="floatingInput" class="etiqueta__imput">Email</label>
             </div>
             <div class="form-floating">
                 <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                <label for="floatingPassword">Contraseña</label>
+                <label for="floatingPassword" class="etiqueta__imput">Contraseña</label>
             </div>
             <div class="form-floating">
                 <input class="input__btn" type="submit" value="iniciar sesion">
