--- a/paginas/contactanos.html
+++ b/paginas/contactanos.html
@@ -7,64 +7,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-widsth, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <script src="https://kit.fontawesome.com/8c75121902.js" crossorigin="anonymous"></script>
+    <script defer src="index.js"></script>
     <title>FotoProWeb</title>  
 </head>
 <body>
     <header>
-        <section class="header__logo">
-            <img src="../recursos/logo.jpg" alt="logo" height="100px">
+        <section class="header__index">
+            <div class="header__logo">
+                <img src="../recursos/logo.jpg" alt="logo" height="100px" class="header__logo--celu">
+            </div>
+            <nav class="header__nav">
+                <div class="header__loginbtn--padre">
+                    <a href="paginas/login.html" target="_blank"><button class="header__loginbtn">Login</button></a>
+                </div>
+                <div class="header__buscador">
+                    <input type="text" class="header__buscador--input">Buscar
+                </div>
+                <button class="header__boton_desplegable"><i class="fa-solid fa-bars"></i></i></button>
+                <ul class="header__navegador">
+                    <li class="botonesheader"><a href="paginas/eventos.html">Eventos</a></li>
+                    <li class="botonesheader"><a href="paginas/capacitacion.html">Capacitacion</a></li>
+                    <li class="botonesheader"><a href="paginas/contactanos.html">Contactanos</a></li>
+                </ul>
+            </nav>
         </section>
-        <nav>
-            <div class="header__loginbtn">
-                <a href="login.html" target="_blank"><button>Login</button></a>
-            </div>
-            <div class="header__buscador">
-                <input type="text">Buscar
-            </div>
-            <ul class="header__navegador">
-                <li class="botonesheader"><a href="../index.html">Inicio</a></li>
-                <li class="botonesheader"><a href="eventos.html">Eventos</a></li>
-                <li class="botonesheader"><a href="capacitacion.html">Capacitacion</a></li>
-                <li class="botonesheader"><a href="contactanos.html">Contactanos</a></li>
-            </ul>
-        </nav>
     </header>
+
+
     <main>
-        <section>
-            <img src="../recursos/Contacto.jpg" alt="contactanos">
-            <div>
-                <h4>
+        <section class="main__contactanos">
+            <img src="../recursos/Contacto.jpg" alt="contactanos" class="main__contactanos--foto">
+            <div class="main__contactanos--titulo">
+                <h4 class="main__contactanos--titulo--hijo">
                     Dejanos todas tus dudas
                 </h4>
             </div>
         </section>
-        <section>
-            <input type="text">Nombre
-            <input type="text">Mail
+        <section class="main__contactanos--formulario">
+            <input class="contactanos__input" type="text">Nombre
+            <input class="contactanos__input" type="text">Mail
             <textarea name="dejanos tu comentario" cols="30" rows="10"></textarea>
             <button>Enviar Mensaje</button>
-            <div>
+            <div class="contactanos__mapa">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6568.503311437639!2d-58.44555769033341!3d-34.59779741325034!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca0ae44e3f25%3A0xd37d5de5af65697c!2sAvenida%20Corrientes%205506-5560!5e0!3m2!1ses-419!2sar!4v1650064849917!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
     </main>
+
     <footer>
-        <section class="footer__logo">
-            <img src="../recursos/logo.jpg" alt="logo" height="100px">
-        </section>
-        <section>
-            <nav>
-                <ul class="footer__nav">
-                    <li class="botonesfooter">Instagram</li>
-                    <li class="botonesfooter">Facebook</li>
-                    <li class="botonesfooter">Telegram</li>
-                </ul>
-            </nav>
-            <div class="footer__disclaimer">
-                <h5>marca registrada y derechos reservados ...</h5>
+        <div class="footer__logo">
+            <img class="footer__logo--hijo" src="../recursos/blur_edges_logo_footer.png" alt="logo" height="100px">
+        </div>
+        <section class="footer__escrito">
+            <div class="botonesfooter">Instagram</div>
+            <div class="botonesfooter">Facebook</div>
+            <div class="botonesfooter">Telegram</div>
+            <div class="footer__disclaimer--padre">
+                <h5 class="footer__disclaimer">marca registrada y derechos reservados ...</h5>
             </div>
         </section>
     </footer>
+
 </body>
 </html>
