previo al marge con branch corrigiendo-main

--- a/paginas/contactanos.html
+++ b/paginas/contactanos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="shorcut icon" type="png" href="recursos/android-icon-36x36.png">
+    <link rel="shorcut icon" type="png" href="../recursos/android-icon-36x36.png">
     <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Square+Peg&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
@@ -20,16 +20,16 @@
             </div>
             <nav class="header__nav">
                 <div class="header__loginbtn--padre">
-                    <a href="paginas/login.html" target="_blank"><button class="header__loginbtn">Login</button></a>
+                    <a href="../paginas/login.html" target="_blank"><button class="header__loginbtn">Login</button></a>
                 </div>
                 <div class="header__buscador">
                     <input type="text" class="header__buscador--input">Buscar
                 </div>
                 <button class="header__boton_desplegable"><i class="fa-solid fa-bars"></i></i></button>
                 <ul class="header__navegador">
-                    <li class="botonesheader"><a href="paginas/eventos.html">Eventos</a></li>
-                    <li class="botonesheader"><a href="paginas/capacitacion.html">Capacitacion</a></li>
-                    <li class="botonesheader"><a href="paginas/contactanos.html">Contactanos</a></li>
+                    <li class="botonesheader"><a href="eventos.html">Eventos</a></li>
+                    <li class="botonesheader"><a href="capacitacion.html">Capacitacion</a></li>
+                    <li class="botonesheader"><a href="contactanos.html">Contactanos</a></li>
                 </ul>
             </nav>
         </section>
