--- a/paginas/login.html
+++ b/paginas/login.html
@@ -28,9 +28,9 @@
                 </div>
                 <button class="header__boton_desplegable"><i class="fa-solid fa-bars"></i></i></button>
                 <ul class="header__navegador">
-                    <li class="botonesheader"><a href="paginas/eventos.html">Eventos</a></li>
-                    <li class="botonesheader"><a href="paginas/capacitacion.html">Capacitacion</a></li>
-                    <li class="botonesheader"><a href="paginas/contactanos.html">Contactanos</a></li>
+                    <li class="botonesheader"><a href="eventos.html">Eventos</a></li>
+                    <li class="botonesheader"><a href="capacitacion.html">Capacitacion</a></li>
+                    <li class="botonesheader"><a href="contactanos.html">Contactanos</a></li>
                 </ul>
             </nav>
         </section>
