--- a/paginas/login.html
+++ b/paginas/login.html
@@ -27,7 +27,7 @@
                     <input type="text" class="header__buscador--input">Buscar
                 </div>
                 <button class="header__boton_desplegable"><i class="fa-solid fa-bars"></i></i></button>
-                <ul class="header__navegador">
+                <ul class="header__navegador header__navegador--visible">
                     <li class="botonesheader"><a href="eventos.html">Eventos</a></li>
                     <li class="botonesheader"><a href="capacitacion.html">Capacitacion</a></li>
                     <li class="botonesheader"><a href="contactanos.html">Contactanos</a></li>
