--- a/paginas/eventos.html
+++ b/paginas/eventos.html
@@ -16,7 +16,8 @@
     <header>
         <section class="header__index">
             <div class="header__logo">
-                <img src="../recursos/logo.jpg" alt="logo" height="100px" class="header__logo--celu">
+                <a href="../index.html"><img src="../recursos/logo.jpg" alt="logo" height="100px" class="header__logo--celu">
+                </a>
             </div>
             <nav class="header__nav">
                 <div class="header__loginbtn--padre">
