termino pag de eventos no es responsive aun

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Square+Peg&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-widsth, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/8c75121902.js" crossorigin="anonymous"></script>
     <script defer src="index.js"></script>
@@ -38,17 +38,19 @@
     </header>
     <main>
         <section class="main__page">
-            <img src="recursos/index.jpg" class="page__foto"/>
+            <div>
+                <img src="recursos/index.jpg" class="page__foto"/>
+            </div>
             <div class="page__title">
                 <h1>Encontra tu Fotografo/a Interior</h1>
             </div>
             <div class="page__subtitle">
                 <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio provident tempora doloribus unde delectus consequuntur perspiciatis sit saepe magnam dolores maxime?</h2>
-            </div>             
+            </div>
         </section>
-        <section class="main__btn">
-            <button class="quieroinscribirme">Quiero Inscribirme</button>
-        </section>
+     <section class="main__btn">
+        <button class="quieroinscribirme">Quiero Inscribirme</button>
+    </section>
         <section class="video">
             <div class="main_video--contenedor">
                 <iframe class="main__video" src="https://www.youtube.com/embed/OfGgVepGyC4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
