terminando pag eventos

--- a/paginas/capacitacion.html
+++ b/paginas/capacitacion.html
@@ -36,58 +36,59 @@
         </section>
     </header>
     <main>
-        <section>
-            <img src="../recursos/capacitacion.jpg" alt="eventos">
-            <div>
-                <h4>
+        <section class="showcase__capacitacion">
+            <!-- <img src="../recursos/capacitacion.jpg" alt="eventos"> -->
+                <h1>
                     ¡Sacale el mejor partido a tus habilidades con nosotros!
-                </h4>
-                <h6>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur alias aliquam optio nemo earum, officia deleniti tempora nobis at modi sequi quisquam numquam beatae esse eveniet quia veniam odit vero.
-                </h6>
-            </div>
+                </h1>
+                <p>
+                    Marcanos tus preferencias y nosotros te recomendamos si nuestros cursos son ideales para vos o si es necesario comenzar la carrera!
+                </p>
         </section>
-        <section>
-            <div>
-                <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h5>
-                <input type="checkbox">pregunta1
-                <input type="checkbox">pregunta2
-                <input type="checkbox">pregunta3
+        <section class="banner">
+            <div class="banner__titulo">
+                <h2 > Marca tus preferencias! </h2>
             </div>
-            <div>
-                <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h5>
-                <input type="checkbox">pregunta1
-                <input type="checkbox">pregunta2
-                <input type="checkbox">pregunta3
-            </div>
+            <section class="banner__contenido--padre">
+                <div class="banner__contenido banner1">
+                    <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h5>
+                    <input type="checkbox">pregunta1
+                    <input type="checkbox">pregunta2
+                    <input type="checkbox">pregunta3
+                </div>
+                <div class="banner__contenido banner2">
+                    <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h5>
+                    <input type="checkbox">pregunta1
+                    <input type="checkbox">pregunta2
+                    <input type="checkbox">pregunta3
+                </div>
+            </section>
         </section>
-        <section>
-            <div>
+        <section class="cards__capacitacion">
+            <div class="cards__capacitacion--individuales">
                 <h3>Curso: introduccion a la fotografia</h3>
                 <img src="../recursos/inroduccion a la fotografia.jpg" alt="introduccion">
                 <h6>descripcion ...</h6>
+                <a href="#">Ingresar <i class="fa-solid fa-angles-right"></i></a>
             </div>
-            <div>
+            <div class="cards__capacitacion--individuales">
                 <h3>Carrera: fotografo profesional</h3>
                 <img src="../recursos/carrerag fotografia.jpg" alt="Carrera">
                 <h6>descripcion ...</h6>
+                <a href="#">Ingresar <i class="fa-solid fa-angles-right"></i></a>
             </div>            
         </section>
     </main>
     <footer>
-        <section class="footer__logo">
-            <img src="../recursos/logo.jpg" alt="logo" height="100px">
-        </section>
-        <section>
-            <nav>
-                <ul class="footer__nav">
-                    <li class="botonesfooter">Instagram</li>
-                    <li class="botonesfooter">Facebook</li>
-                    <li class="botonesfooter">Telegram</li>
-                </ul>
-            </nav>
-            <div class="footer__disclaimer">
-                <h5>marca registrada y derechos reservados ...</h5>
+        <div class="footer__logo">
+            <img class="footer__logo--hijo" src="../recursos/blur_edges_logo_footer.png" alt="logo" height="100px">
+        </div>
+        <section class="footer__escrito">
+            <div class="botonesfooter">Instagram</div>
+            <div class="botonesfooter">Facebook</div>
+            <div class="botonesfooter">Telegram</div>
+            <div class="footer__disclaimer--padre">
+                <h5 class="footer__disclaimer">marca registrada y derechos reservados ...</h5>
             </div>
         </section>
     </footer>
