termino pag capacitacion no responsive

--- a/paginas/capacitacion.html
+++ b/paginas/capacitacion.html
@@ -52,15 +52,33 @@
             <section class="banner__contenido--padre">
                 <div class="banner__contenido banner1">
                     <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h5>
-                    <input type="checkbox">pregunta1
-                    <input type="checkbox">pregunta2
-                    <input type="checkbox">pregunta3
+                    <div class="banner__contenido--inputs">
+                        <input type="checkbox">
+                        <label for="pregunta">pregunta1</label>
+                    </div>
+                    <div class="banner__contenido--inputs">
+                        <input type="checkbox">
+                        <label for="pregunta">pregunta2</label>
+                    </div>
+                    <div class="banner__contenido--inputs">
+                        <input type="checkbox">
+                        <label for="pregunta">pregunta3</label>
+                    </div>
                 </div>
                 <div class="banner__contenido banner2">
                     <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h5>
-                    <input type="checkbox">pregunta1
-                    <input type="checkbox">pregunta2
-                    <input type="checkbox">pregunta3
+                    <div class="banner__contenido--inputs">
+                        <input type="checkbox">
+                        <label for="pregunta">pregunta1</label>
+                    </div>
+                    <div class="banner__contenido--inputs">
+                        <input type="checkbox">
+                        <label for="pregunta">pregunta2</label>
+                    </div>
+                    <div class="banner__contenido--inputs">
+                        <input type="checkbox">
+                        <label for="pregunta">pregunta3</label>
+                    </div>
                 </div>
             </section>
         </section>
