--- a/paginas/eventos.html
+++ b/paginas/eventos.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="../css/style.css">
     <script src="https://kit.fontawesome.com/8c75121902.js" crossorigin="anonymous"></script>
     <script defer src="index.js"></script>
+    <meta name="description" content="Aprende fotografia de manera dinamica , divertida y profesional, con modalidades online y/o presenciales"> 
+    <meta name="keywords" content="html, fotografia, curso de fotografia, aprender fotografia, fotos, aprender"> 
     <title>FotoProWeb</title>  
 </head>
 <body>
