arreglo menu hamburguesa y comienzo responsive para mobile

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                 <div class="header__buscador">
                     <input type="text" class="header__buscador--input">Buscar
                 </div>
-                <button class="header__boton_desplegable"><i class="fa-solid fa-bars"></i></i></button>
+                <label class="header__boton_desplegable" for="menu-check"><i for="menu-check" class="fa-solid fa-bars"></i></i></label>
+                <input class="menu__checkbox--input" type="checkbox" id="menu-check">
                 <ul class="header__navegador header__navegador--visible">
                     <li class="botonesheader"><a href="paginas/eventos.html">Eventos</a></li>
                     <li class="botonesheader"><a href="paginas/capacitacion.html">Capacitacion</a></li>
@@ -38,6 +39,7 @@
             </nav>
         </section>
     </header>
+
     <main>
         <section class="main__page">
             <div>
@@ -47,7 +49,9 @@
                 <h1>Encontra tu Fotografo/a Interior</h1>
             </div>
             <div class="page__subtitle">
-                <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio provident tempora doloribus unde delectus consequuntur perspiciatis sit saepe magnam dolores maxime?</h2>
+                <h2>Aprende con nosotros de forma divertida, practica y profesional; ya sea con nuestras modalidades Online y/o Presenciales.
+                Te invitamos a que explores nuestros cursos, eventos, carreras y si te quedo alguna duda simpre podes contactarnos !
+                </h2>
             </div>
         </section>
      <section class="main__btn">
@@ -58,7 +62,7 @@
                 <iframe class="main__video" src="https://www.youtube.com/embed/OfGgVepGyC4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="main__videodescription">
-                <h4>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus cum, velit aperiam culpa, labore recusandae maxime alias tenetur, deleniti eaque ratione. Nesciunt error mollitia necessitatibus maxime voluptatum explicabo similique. Id. .. ... </h4>
+                <h4>Nutrirte para que adquieras la capacidad de contar una historia con tan solo una imagen, para que puedas transmitir sentimientos, sensaciones e incluso para que puedas potenciar tu veta artística </h4>
             </div>
         </section>
     </main>
