--- a/paginas/eventos.html
+++ b/paginas/eventos.html
@@ -28,7 +28,8 @@
                 <div class="header__buscador">
                     <input type="text" class="header__buscador--input">Buscar
                 </div>
-                <button class="header__boton_desplegable"><i class="fa-solid fa-bars"></i></i></button>
+                <label class="header__boton_desplegable" for="menu-check"><i for="menu-check" class="fa-solid fa-bars"></i></i></label>
+                <input class="menu__checkbox--input" type="checkbox" id="menu-check">
                 <ul class="header__navegador header__navegador--visible">
                     <li class="botonesheader"><a href="eventos.html">Eventos</a></li>
                     <li class="botonesheader"><a href="capacitacion.html">Capacitacion</a></li>
