rehago footer responsive

--- a/paginas/capacitacion.html
+++ b/paginas/capacitacion.html
@@ -103,14 +103,17 @@
         <div class="footer__logo">
             <img class="footer__logo--hijo" src="../recursos/blur_edges_logo_footer.png" alt="logo" height="100px">
         </div>
-        <section class="footer__escrito">
-            <div class="botonesfooter">Instagram</div>
-            <div class="botonesfooter">Facebook</div>
-            <div class="botonesfooter">Telegram</div>
-            <div class="footer__disclaimer--padre">
-                <h5 class="footer__disclaimer">marca registrada y derechos reservados ...</h5>
+        <section class="footer__nav">
+            <div class="redes">
+                <a href="#">Facebook</a>
+                <a href="#">Instagram</a>
+                <a href="#">Telegram</a>
+            </div>
+            <div>
+                <p>2022, Todos Los Derechos Reservados.</p>
             </div>
         </section>
+
     </footer>
 </body>
 </html>
